--- a/src/theme/components/question-pool.component.scss
+++ b/src/theme/components/question-pool.component.scss
@@ -54,7 +54,7 @@
       .right-container{
         background: #F6F7FB;
         width:30%; 
-        padding: 8px 24px 0px 24px;
+        padding: 8px 24px 0px 24px !important;
 
         .search-container{
           width: 100%;
